--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vite + JS</title>
+	<script src="./components/Script.js"></script>
 	<link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
@@ -14,6 +15,7 @@
 		<img src="/bootcamp-logo.svg" alt="Front-End Bootcamp Logo">
 	</main>
 	<script type="module" src="/assets/script/main.js"></script>
+
 </body>
 
 </html>
